--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "realestate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon backend/index.js",
     "start": "node backend/index.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend && ls frontend/dist"
   },
   "keywords": [],
   "author": "",
@@ -29,3 +29,4 @@
     "nodemon": "^3.1.4"
   }
 }
+
