--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "realestate": "file:..",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.4"
   },
