changes in index.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "realestate",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon backend/index.js",
