--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-MONGO = "mongodb+srv://root:root@fooddelivery.ytsw559.mongodb.net/fooddelivery?retryWrites=true&w=majority&appName=fooddelivery"
+MONGO = "mongodb+srv://root:root@cluster0.y1mgv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MY_EMAIL = "saurabhmishra142003@gmail.com"
 MY_PASSWORD ="Saurabh@803"
 PORT = 3000
